# holosis-radaAPI-runner-test

./: .gitignore  CMakeLists.txt  README.cmake  README.md  RadarApi.cpp  RadarApi.py  RadarClientExample.py  RadarFlaskClientExample,py  RadarFlaskClientExample.py  dockerfile  pyproject.toml  radar_client.py  run_flask_server.py
.devcontainer/: Dockerfile  README.md  docker-entry.sh  run.sh
.github/workflows/: image-build.yml
Debug/: debug.xml  makefile  sources.mk
Debug/src/: NoveldaXmlParser.d  RemoteConnection.d  Utilities.d  main.d  subdir.mk
Debug/src/Radar/: subdir.mk  taskRadar.d
Debug/src/XDriver/: subdir.mk  x4driver.d
Debug/src/hal/: radar_hal.d  subdir.mk
Debug/src2/: i2c-dev.d  subdir.mk  wiringx.d
Debug/src2/platform/: platform.d  subdir.mk
Debug/src2/platform/hardkernel/: subdir.mk
Debug/src2/platform/lemaker/: subdir.mk
Debug/src2/platform/linksprite/: subdir.mk
Debug/src2/platform/raspberrypi/: subdir.mk
Debug/src2/platform/solidrun/: hummingboard_base_pro_dq.d  hummingboard_base_pro_sdl.d  hummingboard_gate_edge_dq.d  hummingboard_gate_edge_sdl.d  subdir.mk
Debug/src2/platform/xunlong/: subdir.mk
Debug/src2/soc/: soc.d  subdir.mk
Debug/src2/soc/allwinner/: subdir.mk
Debug/src2/soc/amlogic/: subdir.mk
Debug/src2/soc/broadcom/: subdir.mk
Debug/src2/soc/nxp/: imx6dqrm.d  imx6sdlrm.d  subdir.mk
Debug/src2/soc/samsung/: subdir.mk
ImxWiring/: CMakeLists.txt  wiringx.c
ImxWiring/platform/solidrun/: hummingboard_base_pro_dq.c  hummingboard_base_pro_sdl.c  hummingboard_gate_edge_dq.c  hummingboard_gate_edge_sdl.c  hummingboard_pro.c
ImxWiring/soc/: soc.c
ImxWiring/soc/nxp/: imx6dqrm.c  imx6sdlrm.c  imx8mp.c
NoveldaDriver/: CMakeLists.txt  NoveldaRadar.cpp  NoveldaRadar.h  README  RemoteConnection.cpp  RemoteConnection.h  Utilities.cpp  Utilities.h
NoveldaDriver/Radar/: taskRadar.cpp  taskRadar.h
NoveldaDriver/XDriver/: 8051_firmware.h  x4driver.c  x4driver.h
NoveldaDriver/hal/: radar_hal.c  radar_hal.h
RadarApi/: CMakeLists.txt  RadarApi.cpp  RadarApi.py
Release/: makefile  sources.mk  ttmk
Release/src/: subdir.mk
Release/src/Radar/: subdir.mk
Release/src/XDriver/: subdir.mk
Release/src/hal/: subdir.mk
Release/src2/: subdir.mk
Release/src2/platform/: subdir.mk
Release/src2/platform/hardkernel/: subdir.mk
Release/src2/platform/lemaker/: subdir.mk
Release/src2/platform/linksprite/: subdir.mk
Release/src2/platform/raspberrypi/: subdir.mk
Release/src2/platform/solidrun/: subdir.mk
Release/src2/platform/xunlong/: subdir.mk
Release/src2/soc/: subdir.mk
Release/src2/soc/allwinner/: subdir.mk
Release/src2/soc/amlogic/: subdir.mk
Release/src2/soc/broadcom/: subdir.mk
Release/src2/soc/nxp/: subdir.mk
Release/src2/soc/samsung/: subdir.mk
cmake/: aarch64-linux-gnu.cmake
dist-packages/Flask-1.1.4.dist-info/: RECORD
dist-packages/pip-20.3.4.dist-info/: RECORD
dist-packages/setuptools-50.3.2.dist-info/: RECORD
dist-packages/wheel-0.37.1.dist-info/: RECORD
imx8-sdk/: build-sdk.sh  download-sdk-sources.sh
imx8-sdk/rootfs-overlay/etc/systemd/system/: resize-rootfs.service
include/: RadarApi.h  common.h  hostInterfaceCommon.h  hummingboard_base_pro_dq.h  hummingboard_base_pro_sdl.h  hummingboard_gate_edge_dq.h  hummingboard_gate_edge_sdl.h  hummingboard_pro.h  i2c-dev.h  imx6dqrm.h  imx6sdlrm.h  imx8mp.h  platform.h  soc.h  wiringx.h
tests/: test_api.py
tests/data/: MODE_MOTION_0_data.npy  MODE_MOTION_1_data.npy  MODE_MOTION_2_data.npy  MODE_MOTION_3_data.npy  MODE_MOTION_4_data.npy  MODE_MOTION_5_data.npy  MODE_POSTURE_0_data.npy  MODE_POSTURE_10_data.npy  MODE_POSTURE_11_data.npy  MODE_POSTURE_12_data.npy  MODE_POSTURE_13_data.npy  MODE_POSTURE_14_data.npy  MODE_POSTURE_15_data.npy  MODE_POSTURE_16_data.npy  MODE_POSTURE_17_data.npy  MODE_POSTURE_18_data.npy  MODE_POSTURE_19_data.npy  MODE_POSTURE_1_data.npy  MODE_POSTURE_20_data.npy  MODE_POSTURE_2_data.npy  MODE_POSTURE_3_data.npy  MODE_POSTURE_4_data.npy  MODE_POSTURE_5_data.npy  MODE_POSTURE_6_data.npy  MODE_POSTURE_7_data.npy  MODE_POSTURE_8_data.npy  MODE_POSTURE_9_data.npy  noise_data_motion_08_22_38.npy  noise_data_motion_08_22_42.npy  noise_data_posture_08_19_57.npy  noise_data_posture_08_20_01.npy
